removing files that are not used
